# summer_school_prog_dm

./: .gitignore  README.md  colab_setup.py  decision_making_notebook.ipynb  main.py  prognostics_notebook.ipynb  pyproject.toml  requirements.txt
himap_results/models/: hsmm_exmple.pkl
src_decision_making/: decision_config.py  replacement_agent.py  visualization.py
src_prognostics/: __init__.py  classes.py  hsmm.py  metrics.py  plots.py  utils.py
src_simulator/: generate_prognostics_dataset.py  sim_config.yml  simulator_class.py
