[project]
name = "summer-school-prog-dm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "himap>=1.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pyaml>=26.2.1",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.0",
    "pre-commit>=4.6.0",
]
